fixed toast spacing on mobile

--- a/packages/augur-simplified/src/modules/toasts/toasts.styles.less
+++ b/packages/augur-simplified/src/modules/toasts/toasts.styles.less
@@ -125,6 +125,7 @@
     @media @breakpoint-mobile-tablet {
       grid-column: 4;
       grid-row: 1;
+      margin-left: @size-4;
     }
 
     > svg {
